# Raylib-Template-Project

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  run.bat  run.sh
src/: Game.cpp  Game.h  main.cpp
